forth/test/fail/test_again_meta_loop_arity_bad.af
fun: again_meta_loop_arity_bad { val -- out }
  loop
    val
    leave
  end
end
